add ArmyChatMemoryRepository